# GithubReleaseDownloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.py
.github/workflows/: publish-release.yml  test-package.yml
src/github_release_downloader/: __init__.py  _meta.py  core.py  main.py
